--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version> 5.2.4</version>
         </dependency>
-                <dependency>
-    <groupId>org.json</groupId>
-    <artifactId>json</artifactId>
-    <version>20230618</version>
-</dependency>
+        <dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.9.8</version>
+	    </dependency>
     </dependencies>
     <build>
         <plugins>
